fix button vertical align

--- a/components/_buttons.css.scss
+++ b/components/_buttons.css.scss
@@ -14,6 +14,7 @@
   }
 
   display: inline-block;
+  vertical-align: middle;
   overflow: hidden;
   padding: 0 1em;
   color: $text-color;
@@ -50,6 +51,7 @@
   }
 
   display: inline-block;
+  vertical-align: middle;
   overflow: hidden;
   padding: 0 1em;
   color: $text-color;
